samples/ansible/frog/role/files/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frog
spec:
  ports:
  - port: 5678
  selector:
    app: frog
